--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,17 @@
                 <target>1.8</target>
             </configuration>
         </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <groups>qa</groups>
+                </configuration>
+            </plugin>
+            [...]
     </plugins>
 </build>
 </project>
