--- a/pom.xml
+++ b/pom.xml
@@ -44,4 +44,19 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19.1</version>
+                    <configuration>
+                        <suiteXmlFiles>
+                            <!-- TestNG suite XML files -->
+                            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                        </suiteXmlFiles>
+                    </configuration>
+                </plugin>
+        </plugins>
+    </build>
 </project>
